# doublecmd_plugins

./: .gitmodules  build.sh
plugman/: .gitignore  README.md  plugman.lpi  plugman.lpr
plugman/default/: plugman.json
plugman/src/: uMainForm.lfm  uMainForm.pas
plugman/src/core/: uDcPaths.pas  uDcXml.pas  uPluginScanner.pas  uPluginTypes.pas  uPlugmanJson.pas
plugman/src/ops/: uDcRestart.pas  uPluginEnable.pas  uPluginInstall.pas  uPluginOrder.pas  uPluginTweak.pas  uPluginUninstall.pas
plugman/src/ui/: fSettings.lfm  fSettings.pas  fTweakLister.lfm  fTweakLister.pas  fTweakPacker.lfm  fTweakPacker.pas  fUpdateConfirm.lfm  fUpdateConfirm.pas  fUrlBind.lfm  fUrlBind.pas
plugman/src/update/: uHttpCheck.pas  uPluginRollback.pas  uPluginUpdate.pas
plugman/test/: test_core.lpr
plugman/testdata/commander/plugins/wlx/testplugin/: test.wlx
plugman/testdata/config/: doublecmd.xml  plugman.ini  plugman.json
wdx/fb2wdx/: fb2wdx.lua  readme.txt
wfx/rclone/src/: rclone.res
wlx/csvview/: .gitignore  CMakeLists.txt
wlx/csvview/src/: plugin.cpp
wlx/dbview/: CMakeLists.txt  README.md
wlx/dbview/include/: BdbEngine.h  DbEngine.h  DbViewWidget.h  DuckDbEngine.h  DuckDbModel.h  FirebirdEngine.h  KeyValueModel.h  LevelDbEngine.h  LmdbEngine.h  MdbEngine.h  RocksDbEngine.h  SqliteBackend.h  SqliteEngine.h
wlx/dbview/include/mdbtools/: mdbtools.h  mdbver.h
wlx/dbview/src/: BdbEngine.cpp  DbEngine.cpp  DbViewWidget.cpp  DuckDbEngine.cpp  DuckDbModel.cpp  FirebirdEngine.cpp  KeyValueModel.cpp  LevelDbEngine.cpp  LmdbEngine.cpp  MdbEngine.cpp  RocksDbEngine.cpp  SqliteBackend.cpp  SqliteEngine.cpp  wlx_entry.cpp
wlx/diagramview/: README.md  config.json
wlx/diagramview/src/: Makefile  plugin.cpp
wlx/jsonview/src/: plugin.cpp
wlx/logview/: CMakeLists.txt  README.md
wlx/logview/src/: LogModel.cpp  LogModel.h  LogViewerWidget.cpp  LogViewerWidget.h  wlx_plugin.cpp
wlx/structview/: CMakeLists.txt  README.md
wlx/structview/include/: StructViewWidget.h  TextFormatEngine.h
wlx/structview/src/: CborEngine.cpp  IniEngine.cpp  JsonEngine.cpp  StructViewWidget.cpp  TomlEngine.cpp  XmlEngine.cpp  YamlEngine.cpp  wlx_entry.cpp
wlx/wayland_qt_base/: CMakeLists.txt  README.md
wlx/wayland_qt_base/include/wayland_qt_base/: CrashLogger.h  EditableGridWidget.h  EncodingUtils.h  FilterRowWidget.h  FilterableHeaderView.h  PluginSplitView.h  ScopedFindReplacePanel.h  ThemeManager.h
wlx/wayland_qt_base/src/: CrashLogger.cpp  EditableGridWidget.cpp  EncodingUtils.cpp  FilterRowWidget.cpp  FilterableHeaderView.cpp  FindReplacePanel.cpp  FocusManager.cpp  PluginSplitView.cpp  PluginStatusBar.cpp  PluginToolBar.cpp  ScopedFindReplacePanel.cpp  SequentialRowProxyModel.cpp  ThemeManager.cpp
wlx/wlxbase_wlqt/: CMakeLists.txt  README.md
wlx/wlxbase_wlqt/include/wlxbase_wlqt/: CrashLogger.h  EditableGridWidget.h  FilterRowWidget.h  FindReplacePanel.h  FocusManager.h  PluginStatusBar.h  PluginToolBar.h  ScopedFindReplacePanel.h  SequentialRowProxyModel.h  ThemeManager.h
wlx/wlxbase_wlqt/src/: CrashLogger.cpp  EditableGridWidget.cpp  EncodingUtils.cpp  FilterRowWidget.cpp  FilterableHeaderView.cpp  FindReplacePanel.cpp  FocusManager.cpp  PluginSplitView.cpp  PluginStatusBar.cpp  PluginToolBar.cpp  ScopedFindReplacePanel.cpp  SequentialRowProxyModel.cpp  ThemeManager.cpp
